// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RefinementList renders markup with state 1`] = `
<ng-ais-refinement-list
  limit={[Function Number]}
  operator={[Function String]}
  searchInstance={[Function NgAisInstance]}
  showLessLabel={[Function String]}
  showMoreLabel={[Function String]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-RefinementList"
  >
    
        
    <ng-ais-header
      classname="ais-RefinementList-header ais-header"
      ng-reflect-class-name="ais-RefinementList-header ais-"
    >
      
      
      
      
    
    </ng-ais-header>
    
  
        
    <div
      class="ais-RefinementList-body ais-body"
    >
      
          
      <ul
        class="ais-RefinementList-list"
      >
        
            
        
        <li
          class="ais-RefinementList-item"
          ng-reflect-ng-class="[object Object]"
        >
          
              
          <label
            class="ais-RefinementList-label"
          >
            
                
            <input
              class="ais-RefinementList-checkbox"
              type="checkbox"
            />
            
                foo
                
            <span
              class="ais-RefinementList-count"
            >
              
                  100
                
            </span>
            
              
          </label>
          
            
        </li>
        <li
          class="ais-RefinementList-item"
          ng-reflect-ng-class="[object Object]"
        >
          
              
          <label
            class="ais-RefinementList-label"
          >
            
                
            <input
              class="ais-RefinementList-checkbox"
              type="checkbox"
            />
            
                bar
                
            <span
              class="ais-RefinementList-count"
            >
              
                  100
                
            </span>
            
              
          </label>
          
            
        </li>
        <li
          class="ais-RefinementList-item"
          ng-reflect-ng-class="[object Object]"
        >
          
              
          <label
            class="ais-RefinementList-label"
          >
            
                
            <input
              class="ais-RefinementList-checkbox"
              type="checkbox"
            />
            
                foobar
                
            <span
              class="ais-RefinementList-count"
            >
              
                  100
                
            </span>
            
              
          </label>
          
            
        </li>
        <li
          class="ais-RefinementList-item"
          ng-reflect-ng-class="[object Object]"
        >
          
              
          <label
            class="ais-RefinementList-label"
          >
            
                
            <input
              class="ais-RefinementList-checkbox"
              type="checkbox"
            />
            
                barfoo
                
            <span
              class="ais-RefinementList-count"
            >
              
                  100
                
            </span>
            
              
          </label>
          
            
        </li>
        
          
      </ul>
      
  
          
      
      
        
    </div>
    
  
        
    <ng-ais-footer
      classname="ais-RefinementList-footer ais-footer"
      ng-reflect-class-name="ais-RefinementList-footer ais-"
    >
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-refinement-list>
`;

exports[`RefinementList renders markup without state 1`] = `
<ng-ais-refinement-list
  limit={[Function Number]}
  operator={[Function String]}
  searchInstance={[Function NgAisInstance]}
  showLessLabel={[Function String]}
  showMoreLabel={[Function String]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-RefinementList"
  >
    
        
    <ng-ais-header
      classname="ais-RefinementList-header ais-header"
      ng-reflect-class-name="ais-RefinementList-header ais-"
    >
      
      
      
      
    
    </ng-ais-header>
    
  
        
    <div
      class="ais-RefinementList-body ais-body"
    >
      
          
      <ul
        class="ais-RefinementList-list"
      >
        
            
        
        
          
      </ul>
      
  
          
      
      
        
    </div>
    
  
        
    <ng-ais-footer
      classname="ais-RefinementList-footer ais-footer"
      ng-reflect-class-name="ais-RefinementList-footer ais-"
    >
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-refinement-list>
`;
